--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "angular-route": "^1.4.7",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
+    "cheerio": "^0.19.0",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "mongoose": "^4.1.11",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "request": "^2.65.0"
   }
 }
