--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.7",
-    "angular-bootstrap": "^0.12.2",
     "angular-loading-bar": "^0.8.0",
     "angular-route": "^1.4.7",
+    "angular-ui-bootstrap": "^0.14.2",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "cheerio": "^0.19.0",
