--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
     "angular-loading-bar": "^0.8.0",
     "angular-route": "^1.4.7",
     "angular-ui-bootstrap": "^0.14.2",
