--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.3",
     "mongoose": "^4.1.11",
     "morgan": "^1.6.1",
+    "parse": "^1.6.8",
     "request": "^2.65.0"
   }
 }
