--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.5",
     "cheerio": "^0.19.0",
     "compression": "^1.6.0",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.11",
     "morgan": "^1.6.1",
